src/test/deca/context/valid/if_cont_01.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 04/01/2023

{
        int a;
        if (true) {
            a = 2;
            println("Hello");
        }

}

