src/test/deca/context/invalid/sans_objet/aatest.deca
// Description:
//    Programme minimaliste testant NoOperation
//
// Resultats:
//
//
// Historique:
//    cree le 04/01/2023

class A{
    int getX(){

    }
}

{
    A a = new A();
    a instanceof int;
}

